--- a/backend/config.env
+++ b/backend/config.env
@@ -1,7 +1,7 @@
-PORT=4000
-FRONTEND_URL=http://localhost:5173
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=465
-SMTP_SERVICE=gmail
-SMTP_MAIL=priyambadaonkar@gmail.com
-SMTP_PASSWORD=nitj rfyj lhlw akqs
+PORT=
+FRONTEND_URL=
+SMTP_HOST=
+SMTP_PORT=
+SMTP_SERVICE=
+SMTP_MAIL=
+SMTP_PASSWORD=
